# MinimalBindIGL

py_vectorfields/: CMakeLists.txt  main_pymesh_app.cpp  py_mesh_app.cpp  testClass.py
py_vectorfields/example_data/: torus_mid_g1.off
